[5] Increase speed by 40%

--- a/5/Makefile
+++ b/5/Makefile
@@ -7,8 +7,8 @@ PYGMENTIZE_OPTS ?= -O linenos
 
 5.pdf: 5.tex stats.pdf stats.tex definitions.tex
 	$(RM) *.aux
-	$(XELATEX) -halt-on-error $<
-	$(XELATEX) -halt-on-error $<
+	$(XELATEX) -halt-on-error $< >/dev/null
+	$(XELATEX) -halt-on-error $< >/dev/null
 
 definitions.tex:
 	$(PYGMENTIZE) -f tex -S $(PYGMENTIZE_STYLE) -f tex > $@
